--- a/_includes/links.html
+++ b/_includes/links.html
@@ -3,4 +3,4 @@
 <a href="{{ "/atom.xml" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link">RSS</h2></a>
 <a href="{{ "/Hacker" | prepend: site.baseurl | replace '//', '/' }}"><h2 class="header-link">Hacker</h2></a>
 <a href="{{ "/Arcanist" | prepend: site.baseurl | replace '//', '/' }}"><h2 class="header-link">Arcanist</h2></a>
-<a href="{{ "/Artificer" | prepend: site.baseurl | replace '//', '/' }}"><h2 class="header-link">Artificer</h2></a>
+<a href="{{ "/href" | prepend: site.baseurl | replace '//', '/' }}"><h2 class="header-link">href</h2></a>
